--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 js-sys = "0.3.64"
-leptos = { version = "0.3.1" }
+leptos = { version = "0.4.2", default-features = false, features = ["csr", "nightly"] }
+leptos_icons = { version = "0.0.15", git = "https://github.com/Carlosted/leptos-icons", default_features = false, features = ["AiDashboardOutlined", "BiFileBlankRegular", "SiRust"] }
+leptos_router = { version = "0.4.2", default-features = false, features = ["csr", "nightly"] }
 serde = { version = "1.0.167", features = ["derive"] }
 serde_json = "1.0.100"
 strum = "0.25.0"
